@startuml
'https://plantuml.com/class-diagram

abstract class DoughFactory {
    get_dough()
}
class OrganicDoughFactory {
}

class Pizza {
    order_pizza(toppings)
}

class OrganicPizza {
}

DoughFactory <|-- OrganicDoughFactory
DoughFactory <|-- Pizza
Pizza <|-- OrganicPizza
OrganicDoughFactory <|-- OrganicPizza


@enduml